--- a/style.css
+++ b/style.css
@@ -9,9 +9,8 @@
 .header{
     height: 100vh;
     width: 100%;
-    background-color: #C5D86D; 
-    background: url(images/background.avif);
-    background-position: center;
+    background: url(images/background.avif) no-repeat center center fixed;
+    background-size: cover;
     position: relative;
 }
 nav{
@@ -19,10 +18,26 @@ nav{
     padding: 2% 6%;
     justify-content: space-between;
     align-items: center;
+    position: fixed; /* Keep the navbar fixed at the top */
+    top: 0;
+    width: 100%;
+    background-color: transparent;
+    transition: background-color 0.3s ease, padding 0.3s ease;
+    z-index: 1000; /* Ensure it stays on top of other elements */
+}
+nav.scrolled {
+    background-color: rgba(197, 216, 109); /* Background color when scrolled */
+    padding: 0% 6%;
+    box-shadow: rgba(0, 0, 0, 0.45) 0px 25px 20px -20px;
 }
 a img{
     height: 100px;
     width: 150px;
+    transition: opacity 0.3s ease;
+}
+nav img.hidden {
+    opacity: 0;
+    transition: opacity 0.3s ease;
 }
 .nav-links{
     flex: 1;
@@ -136,9 +151,9 @@ nav .ri{
 
 .about{
     width: 80%;
-    margin: auto;
+    margin: 80px auto 0;
     text-align: center;
-    padding-top: 100px;
+    padding-top: 200px;
 }
 h1{
     font-size: 36px;
